# FFmpegDemos

AndroidFFmpegDecode/: settings.gradle
AndroidFFmpegDecode/app/: CMakeLists.txt  build.gradle
AndroidFFmpegDecode/app/src/androidTest/java/com/cakes/androidffmpegdecode/: ExampleInstrumentedTest.java
AndroidFFmpegDecode/app/src/main/: AndroidManifest.xml
AndroidFFmpegDecode/app/src/main/cpp/: decodeVideo.c  logUtil.h  native-lib.cpp
AndroidFFmpegDecode/app/src/main/java/com/cakes/androidffmpegdecode/: LogUtil.java  MainActivity.java
AndroidFFmpegDecode/app/src/main/res/layout/: activity_main.xml
AndroidFFmpegDecode/app/src/main/res/values/: strings.xml  themes.xml
AndroidFFmpegDecode/app/src/main/res/values-night/: themes.xml
AndroidFFmpegDecode/app/src/test/java/com/cakes/androidffmpegdecode/: ExampleUnitTest.java
AndroidFFmpegDecode/gradle/wrapper/: gradle-wrapper.properties
AndroidFFmpegPush/: settings.gradle
AndroidFFmpegPush/app/: CMakeLists.txt  build.gradle
AndroidFFmpegPush/app/src/androidTest/java/com/cakes/androidffmpegpush/: ExampleInstrumentedTest.java
AndroidFFmpegPush/app/src/main/: AndroidManifest.xml
AndroidFFmpegPush/app/src/main/cpp/: logUtil.h  native-lib.cpp  push.c
AndroidFFmpegPush/app/src/main/java/com/cakes/androidffmpegpush/: LogUtil.java  MainActivity.java
AndroidFFmpegPush/app/src/main/res/layout/: activity_main.xml
AndroidFFmpegPush/app/src/main/res/values/: strings.xml  themes.xml
AndroidFFmpegPush/app/src/main/res/values-night/: themes.xml
AndroidFFmpegPush/app/src/test/java/com/cakes/androidffmpegpush/: ExampleUnitTest.java
AndroidFFmpegPush/gradle/wrapper/: gradle-wrapper.properties
AndroidHello/: readMe.md  settings.gradle
AndroidHello/app/: build.gradle
AndroidHello/app/src/androidTest/java/com/cakes/androidhello/: ExampleInstrumentedTest.java
AndroidHello/app/src/main/: AndroidManifest.xml
AndroidHello/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidHello/app/src/main/java/com/cakes/androidhello/: MainActivity.java
AndroidHello/app/src/test/java/com/cakes/androidhello/: ExampleUnitTest.java
AndroidHello/app2/: build.gradle
AndroidHello/app2/src/androidTest/java/com/cakes/app2/: ExampleInstrumentedTest.java
AndroidHello/app2/src/main/: AndroidManifest.xml
AndroidHello/app2/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidHello/app2/src/main/java/com/cakes/app2/: MainActivity.java
AndroidHello/app2/src/main/res/layout/: activity_main.xml
AndroidHello/app2/src/main/res/values-night/: themes.xml
AndroidHello/app2/src/test/java/com/cakes/app2/: ExampleUnitTest.java
AndroidHello/app3/: CMakeLists.txt  build.gradle
AndroidHello/app3/src/androidTest/java/com/cakes/app3/: ExampleInstrumentedTest.java
AndroidHello/app3/src/main/: AndroidManifest.xml
AndroidHello/app3/src/main/cpp/: native-lib.cpp
AndroidHello/app3/src/main/java/com/cakes/app3/: MainActivity.java
AndroidHello/app3/src/main/res/layout/: activity_main.xml
AndroidHello/app3/src/test/java/com/cakes/app3/: ExampleUnitTest.java
AndroidHello/app4/: build.gradle
AndroidHello/app4/src/androidTest/java/com/cakes/app4/: ExampleInstrumentedTest.java
AndroidHello/app4/src/main/: AndroidManifest.xml
AndroidHello/app4/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidHello/app4/src/main/java/com/cakes/app4/: MainActivity.java
AndroidHello/app4/src/main/res/layout/: activity_main.xml
AndroidHello/app4/src/test/java/com/cakes/app4/: ExampleUnitTest.java
AndroidHello/gradle/wrapper/: gradle-wrapper.properties
AndroidHelloFFmpeg/: settings.gradle
AndroidHelloFFmpeg/app/: CMakeLists.txt  build.gradle
AndroidHelloFFmpeg/app/src/androidTest/java/com/cakes/androidhelloffmpeg/: ExampleInstrumentedTest.java
AndroidHelloFFmpeg/app/src/main/: AndroidManifest.xml
AndroidHelloFFmpeg/app/src/main/cpp/: CMakeLists.txt  hello.c  logUtil.h  native-lib.cpp
AndroidHelloFFmpeg/app/src/main/java/com/cakes/androidhelloffmpeg/: MainActivity.java
AndroidHelloFFmpeg/app/src/main/res/layout/: activity_main.xml
AndroidHelloFFmpeg/app/src/main/res/values/: strings.xml  themes.xml
AndroidHelloFFmpeg/app/src/main/res/values-night/: themes.xml
AndroidHelloFFmpeg/app/src/test/java/com/cakes/androidhelloffmpeg/: ExampleUnitTest.java
AndroidHelloFFmpeg/gradle/wrapper/: gradle-wrapper.properties
FFmpegPlayer/: settings.gradle
FFmpegPlayer/app/: build.gradle
FFmpegPlayer/app/src/androidTest/java/com/cakes/ffmpegplayer/: ExampleInstrumentedTest.java
FFmpegPlayer/app/src/main/: AndroidManifest.xml
FFmpegPlayer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FFmpegPlayer/app/src/main/java/com/cakes/ffmpegplayer/: MainActivity.java
FFmpegPlayer/app/src/test/java/com/cakes/ffmpegplayer/: ExampleUnitTest.java
FFmpegPlayer/gradle/wrapper/: gradle-wrapper.properties
